betalm: convert cutout overlay to px
* dp should only be used for emulated display cutouts
* px = dp * (dpi / 160) (using 420 as dpi)
* drop statusbar height override while at it

Co-authored-by: Tim Zimmermann <tim@linux4.de>
Change-Id: If4a1e11c21b91e534d04fae32a233ee5676d2078

--- a/overlay/frameworks/base/core/res/res/values/notch.xml
+++ b/overlay/frameworks/base/core/res/res/values/notch.xml
@@ -39,5 +39,5 @@
 
          @see https://www.w3.org/TR/SVG/paths.html#PathData
          -->
-    <string translatable="false" name="config_mainBuiltInDisplayCutout">M 0,0 L -111.62, 0 L -111.62, 33.52 L 111.62, 33.52 L 111.62, 0 Z @dp</string>
+    <string translatable="false" name="config_mainBuiltInDisplayCutout">M 0,0 L -293.0025, 0 L -293.0025, 87.99 L 293.0025, 87.99 L 293.0025, 0 Z</string>
 </resources>
